--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   json_annotation: ^4.8.1
   dio: ^5.4.1
   pretty_dio_logger: ^1.3.1
+  retrofit: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +28,7 @@ dev_dependencies:
   freezed: ^2.4.7
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
+  retrofit_generator: ^8.1.0
 
 
 flutter:
