--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   dio: ^5.4.1
   pretty_dio_logger: ^1.3.1
   retrofit: ^4.1.0
+  rxdart: ^0.27.7
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -33,3 +35,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - lib/assets/
