--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   retrofit: ^4.1.0
   rxdart: ^0.27.7
   cached_network_image: ^3.3.1
+  infinite_scroll_pagination: ^4.0.0
 
 dev_dependencies:
   flutter_test:
