--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   shared_preferences: ^2.2.2
   jwt_decoder: ^2.0.1
+  flutter_onboarding_slider: ^1.0.11
 
 dev_dependencies:
   flutter_test:
@@ -40,3 +41,4 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/
+    - assets/images/
